added description for diagrams (activity, sequence)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
-    "cSpell.words": [
-        "Brüheinheit",
-        "Brühgruppe",
-        "Interaktionspunkte",
-        "Komponentendarstellung",
-        "Komponentendiagramm",
-        "Komponentendiagramme",
-        "Komponentendiagramms",
-        "Sequenzdiagramm"
-    ]
+  "cSpell.words": [
+    "Aktivitätendiagramm",
+    "Aktivtätendiagramm",
+    "Brüheinheit",
+    "Brühgruppe",
+    "Interaktionspunkte",
+    "Komponentendarstellung",
+    "Komponentendiagramm",
+    "Komponentendiagramme",
+    "Komponentendiagramms",
+    "Sequenzdiagramm",
+    "Sequenzdiagramme"
+  ]
 }
